--- a/DofusMaster/MainWindow.xaml
+++ b/DofusMaster/MainWindow.xaml
@@ -5,25 +5,165 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DofusMaster"
         mc:Ignorable="d"
-        Title="Dofus Master - v1.0.0" Height="512" Width="512">
+        Title="Dofus Master - v1.0.0" Height="408" Width="528"
+        ResizeMode="NoResize">
     <Grid Background="#363333">
-        <Border CornerRadius="8" Width="256" BorderBrush="#272121" HorizontalAlignment="Left" Margin="8" BorderThickness="8">
-            <StackPanel>
-                <Label x:Name="selectedAccountLabel" Height="32" Foreground="#F6E9E9" FontFamily="Segoe UI Semibold" FontWeight="Normal" FontSize="16" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,-4,0,0"></Label>
-                <ListBox x:Name="lbAccounts" SelectionChanged="lbAccounts_SelectionChanged" Background="#272121" BorderBrush="#272121" Height="360" SelectionMode="Single">
+
+        <Border x:Name="selectionPanel" Visibility="Visible" IsEnabled="false" VerticalAlignment="Top" CornerRadius="8" Width="256" Height="64" BorderBrush="#272121" HorizontalAlignment="Left" Margin="8" BorderThickness="8">
+            <Grid Background="#272121">
+                <Label x:Name="selectAccountName" Height="24" Foreground="#F6E9E9" Margin="8 0 8 0" FontFamily="Segoe UI Semibold" FontWeight="Normal" FontSize="14" Padding="2" VerticalAlignment="Top" HorizontalAlignment="Center">No account selected</Label>
+                <StackPanel Orientation="Horizontal" Height="24" VerticalAlignment="Bottom" Margin="0 0 0 0">
+                    <Button x:Name="btnUp" Cursor="Hand" Click="btnUp_Click" Width="116" Height="22" Background="#FFCC6431"  Foreground="#F6E9E9" FontFamily="Segoe UI Semibold">Up
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="8"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#FFA94E21"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                    <Button x:Name="btnDown" Cursor="Hand" Click="btnDown_Click" Width="116" Height="22" Margin="8 0 0 0" Background="#FFCC6431"  Foreground="#F6E9E9" FontFamily="Segoe UI Semibold">Down
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="8"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#FFA94E21"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                </StackPanel>
+            </Grid>
+        </Border>
+
+        <StackPanel Width="256" HorizontalAlignment="Left"  Margin="8 80 8 8" >
+            <Border CornerRadius="8" BorderBrush="#272121" BorderThickness="8">
+                <ListBox x:Name="lbAccounts" SelectionChanged="lbAccounts_SelectionChanged" Background="#272121" BorderBrush="#272121" Height="232" SelectionMode="Single">
                     <ListBox.ItemContainerStyle>
                         <Style TargetType="ListBoxItem">
-                            <Setter Property="Background" Value="#E16428"/>
-                            <Setter Property="Foreground" Value="#F6E9E9"/>
+                            <Style.Resources>
+                                <Style TargetType="Border">
+                                    <Setter Property="CornerRadius" Value="8"/>
+                                </Style>
+                            </Style.Resources>
+                            <Setter Property="Background" Value="#363333"/>
+                            <Setter Property="Foreground" Value="#FFCC6431"/>
                             <Setter Property="FontFamily" Value="Segoe UI Semibold"/>
+                            <Setter Property="FontSize" Value="14"/>
+                            <Setter Property="Cursor" Value="Hand"/>
+                            <Setter Property="Height" Value="28"/>
                         </Style>
                     </ListBox.ItemContainerStyle>
                 </ListBox>
-                
-                <Button x:Name="refreshButton" Cursor="Hand" Click="refreshButton_Click" VerticalAlignment="Bottom" Margin="8" Height="32" Background="#E16428">
-                    <Label Foreground="#F6E9E9" FontFamily="Segoe UI Semibold" FontWeight="Normal" FontSize="16" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,-4,0,0">Refresh</Label>
-                </Button>
-            </StackPanel>
-        </Border>
+            </Border>
+
+            <Button x:Name="refreshButton" Cursor="Hand" Click="refreshButton_Click" VerticalAlignment="Bottom" Margin="0 8 0 0" Height="24" Background="#FFCC6431">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="8"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FFA94E21"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Resources>
+                <Label Foreground="#F6E9E9" FontFamily="Segoe UI Semibold" FontWeight="Normal" FontSize="14" Padding="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,-4,0,0">Refresh</Label>
+            </Button>
+        </StackPanel>
+
+        <Grid HorizontalAlignment="Center" Width="1" Margin="24 8 0 8" Background="#272121"></Grid>
+
+        <StackPanel x:Name="rightPanel" IsEnabled="False" Width="248" HorizontalAlignment="Right" Margin="0 8 0 0">
+            <Border CornerRadius="8" Height="64" Width="232" BorderBrush="#272121" Margin="0 0 0 8" HorizontalAlignment="Center"  BorderThickness="8">
+                <StackPanel Background="#272121">
+                    <Label x:Name="selectedAccountLabel" Height="22" Width="196" Padding="2" Foreground="#F6E9E9" FontFamily="Segoe UI Semibold" FontSize="14" Margin="0">Focused account</Label>
+                    <Label x:Name="replicationMode" Height="22" Padding="2" Foreground="#F6E9E9" Width="196" Margin="0" FontFamily="Segoe UI Semibold" FontSize="14">No replication</Label>
+                </StackPanel>
+            </Border>
+
+            <Border CornerRadius="8" Height="72" Width="232" BorderBrush="#272121" HorizontalAlignment="Center"  BorderThickness="8">
+                <Grid Background="#272121">
+                    <TextBox x:Name="tbConsoleText" Height="26" Background="#FF1E1818" BorderBrush="#272121" Foreground="#F6E9E9" Width="196" FontFamily="Segoe UI Semibold" FontWeight="Normal" FontSize="14" VerticalAlignment="Top" HorizontalAlignment="Center" Padding="2">Hey boy !</TextBox>
+                    <Button x:Name="btnSend" Cursor="Hand" Click="btnSend_Click" Width="196" Height="22" Background="#FFCC6431"  Foreground="#F6E9E9" FontFamily="Segoe UI Semibold" VerticalAlignment="Bottom">Send to console
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="8"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#FFA94E21"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                </Grid>
+            </Border>
+
+            <Border CornerRadius="8" Height="72" Width="232" BorderBrush="#272121" HorizontalAlignment="Center" Margin="0 8 0 0"  BorderThickness="8">
+                <Grid Background="#272121">
+                    <TextBox x:Name="tbX" Height="26" PreviewTextInput="PreviewTextInput" Background="#FF1E1818" BorderBrush="#272121" Foreground="#F6E9E9" Width="82" FontFamily="Segoe UI Semibold" FontWeight="Normal" FontSize="14" VerticalAlignment="Top" HorizontalAlignment="Left" Margin=" 16 0 0 0" Padding="2" >-2</TextBox>
+                    <TextBox x:Name="tbY" Height="26" PreviewTextInput="PreviewTextInput" Background="#FF1E1818" BorderBrush="#272121" Foreground="#F6E9E9" Width="82" FontFamily="Segoe UI Semibold" FontWeight="Normal" FontSize="14" VerticalAlignment="Top" HorizontalAlignment="Right" Padding="2" Margin="0 0 16 0">0</TextBox>
+                    <Button x:Name="btnTravel" Cursor="Hand" Click="btnTravel_Click" Width="196" Height="22" Background="#FFCC6431"  Foreground="#F6E9E9" FontFamily="Segoe UI Semibold" VerticalAlignment="Bottom">Travel
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="8"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#FFA94E21"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                </Grid>
+            </Border>
+
+            <Button x:Name="btnOpenConfig" Cursor="Hand" Click="btnOpenConfig_Click" Width="232" Margin="0 8 0 0" Height="24" Background="#FFE12828" Foreground="#F6E9E9" FontFamily="Segoe UI Semibold" FontSize="12">Open configuration file
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="8"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FFA92121"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Resources>
+            </Button>
+
+            <Button x:Name="btnKeyCode" Cursor="Hand" Click="btnKeyCode_Click" Width="232" Margin="0 8 0 0" Height="24" Background="#FFE12828" Foreground="#F6E9E9" FontFamily="Segoe UI Semibold" FontSize="12">KeyCode tool (config shortcut)
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="8"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FFA92121"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Resources>
+            </Button>
+
+            <Grid Height="32"></Grid>
+            
+            <Button x:Name="btnCloseAll" Cursor="Hand" Click="btnCloseAll_Click" Width="232" Margin="0 8 0 0" Height="24" Background="#FFE12828" Foreground="#F6E9E9" FontFamily="Segoe UI Semibold" FontSize="12">Close all accounts
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="8"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FFA92121"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Resources>
+            </Button>
+        </StackPanel>
     </Grid>
 </Window>
